# rust-effect-monad

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js
effect_monad/: enum.ResolveFn.html  index.html  macro.effect_map!.html  sidebar-items.js  struct.BoundEffect.html  trait.EffectMonad.html
examples/: hello_goodbye.rs
implementors/core/convert/: trait.From.js
implementors/core/ops/: trait.FnOnce.js
src/: lib.rs
src/effect_monad/: lib.rs.html
